web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-function-declaration-array-destructuring/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,17)
1|function f([]){ "use strict"; }
 |               ^
